<resources>
    <string name="app_name">Celsious</string>
    <string name="descp_logoletras">Logo de letras Celsious</string>
    <string name="descp_carousel_views">Vista para el carousel</string>
    <string name="descp_iconos_genero">Icono para idenficar uno de los generos</string>
    <string name="descp_avatar_container">Contenedor de avatar #</string>
    <string name="text_corousel_1"><b>Te damos la bienvenida.</b></string>
    <string name="text_corousel_2">El historial de tu familia en tu smartphone.</string>
    <string name="text_corousel_3">Registra las temperaturas y el control de las comidas.</string>
    <string name="text_corousel_4">Análisis y asesoramiento médico teniendo en cuenta la edad del niño.</string>
    <string name="text_sign_up"><b>Gracias a estos datos podemos ofrecerte recomendaciones personalizadas</b></string>
    <string name="text_Ble"><b>Activa el Bluetooth</b></string>
    <string name="text_guide"><b>Mantén pulsado el botón hasta que se mueste azul</b></string>
    <string name="content_sign_up">Regístrate</string>
    <string name="content_sign_in">Iniciar sesión</string>
    <string name="content_create_profile">Crear</string>
    <string name="content_email">Dirección de correo electrónico</string>
    <string name="content_password">Contraseña</string>
    <string name="content_check_password">Verificación de contraseña</string>
    <string name="content_name">Nombre</string>
    <string name="content_lastname">Apellidos</string>
    <string name="content_birthday">Fecha de nacimiento</string>
    <string name="content_sex">Sexo</string>
    <string name="content_height">Estatura (cm)</string>
    <string name="content_weight">Peso (kg)</string>
    <string name="content_already_account">¿Ya tienes una cuenta?</string>
    <string name="link_sign_in"><b><u>Iniciar sesión</u></b></string>
    <string name="link_forgot_password"><b><u>¿Has olvidado tu contraseña?</u></b></string>
    <string name="titulo_sign_in">Conectarse</string>
    <string name="titulo_profile">Mi Perfil</string>
    <string name="titulo_sign_up">Registro</string>
    <string name="titulo_logout">Cerrar Sesión</string>
    <string name="titulo_avatarpick">Seleccione su avatar</string>
    <string name="terms_and_condicions">Acepto los Términos y Condiciones, Declaración de Privacidad y Suplemento de Privacidad de Celsious para Productos y Servicios de Salud Digital.</string>
    <string name="data_usage">Acepto que Celsious procese mis datos, incluidas mis métricas, tal y como se describe en el Suplemento de privacidad para productos y servidios de sanidad digital y en la Política de privacidad de Celsious.</string>
    <string name="note">Nota</string>
    <string name="picture">Foto</string>
    <string name="syntom">Sintoma</string>
    <string name="tempeture">Temperatura</string>
    <string name="act_titulo">Titulo</string>
    <string name="act_decsc">Descripción</string>
    <string name="not_decsc">Sin Descripción</string>
    <string name="add">Añadir</string>
    <string name="add_mem">Añadir Miembro</string>
    <string name="next">Siguiente</string>
    <string name="install">Instalar</string>
    <string name="cancel">Cancelar</string>
    <string name="BLE2">Instala Celsious.
    Una forma más inteligente de controlar la salud de tus bebés</string>
    <string-array name="sintomas">
        <item>DIARREA (AGUDA)</item>
        <item>DIARREA (MODERADO)</item>
        <item>DOLOR DE CABEZA (AGUDA)</item>
        <item>DOLOR DE CABEZA (MODERADO)</item>
        <item>DOLOR DE ABDOMINAL (AGUDA)</item>
        <item>DOLOR DE ABDOMINAL (MODERADO)</item>
        <item>RIGIDEZ EN EL CUELLO</item>
        <item>DETERIORO GENERAL DE LA SALUD</item>
        <item>CONVULSIONES</item>
        <item>SARPULLIDO</item>
        <item>DOLOR DE GARGANTA</item>
        <item>NÁUSEAS</item>
        <item>ESCALOFRÍOS</item>
        <item>TOS</item>
        <item>DOLORES EN EL CUERPO</item>
        <item>DOLOR DE OÍDOS</item>
        <item>CONGESTIÓN NASAL</item>
        <item>AFONÍA</item>
        <item>ESTORNUDOS</item>
        <item>GOTEO NASAL</item>
        <item>DIFICULTAD PARA RESPIRAR</item>
    </string-array>

    <string-array name="tiposTemp">
        <item>Ambiente</item>
        <item>Corporal</item>
        <item>Tina</item>
        <item>Comida</item>
    </string-array>
</resources>
